# SmallptGPU

./: CMakeLists.txt  displayfunc.c  displayfunc.h  smallptGPU.c
